# hachha.dev

./: .envrc  .gitignore  .prettierrc.toml  Cargo.toml  README.md  biome.json  build.rs  justfile  shell.nix
.mise/: config.toml
content/: index_phrases.toml  links.toml  projects.toml  robots.txt
content/pages/: 404.html  index.html
content/pages/blog/: article.html  article_metadata.yaml  blog.html  blog_page.html  blogs.html  index.html
content/pages/blog/articles/: article.html  articles.toml  tags.html
content/pages/blog/links/: links.html  links.toml  projects.toml
content/pages/games/: games.toml
content/pages/index/: config.toml  index.html
content/pages/projects/: projects.html  projects.toml  projects.yaml
content/pages/slashpages/: template.html
content/pages/slashpages/pages/: _appearances.md  _buy.md  _coffee.md  _disability.md  _green.md  _next.md  _posse.md  _referrals.md  _save.md  about.md  blank.md  blogroll.md  calendar.md  carry.md  changelog.md  chipotle.md  colophon.md  contact.md  death.md  defaults.md  feeds.md  follow.md  hill.md  hosted.md  ideas.md  interests.md  nope.md  pfp.md  podroll.md  questions.md  self-hosted.md  shoebox.md  slashes.md  slashpages.md  someday.md  til.md  top4.md  uses.md  ways.md  where.md  (+3 more)
content/posts/: 2023-03-20-site_launch_design.md  2023-07-07-nix_1.md  2023-10-01-services_1.md  2024-04-07-2023_retro.md  2024-11-12-a_year_on_game_engines.md  2025-02-05-pachisim.md  2025-02-15-scrapers.md  2025-02-22-slipstream_2.md  2025-02-23-color_palette.md  2025-11-29-slipstream_1.md  2025-12-02-gamertags.md  2026-01-25-jdpub.md  2026-02-02-scrapers-2.md  2026-04-04-radicle.md  2026-05-02-parks.md  2026-06-22-yubikey.md  2026-07-13-villainess.md
content/slashpages/: _community.md  _concerts.md  _elsewhere.md  _hats.md  _junk.md  _pricing.md  _tip.md  about.md  carry.md  changelog.md  colophon.md  death.md  defaults.md  follow.md  games.md  hill.md  hosted.md  interests.md  keys.md  nope.md  pfp.md  podroll.md  resume.md  slashpages.md  someday.md  status.md  tools.md  using.md  where.md
content/styles/: .ignore  blog_markdown.css  content.css  site-colors.css  site_colors.css
content/styles/highlight.js/: catppuccin-mocha.min.css  highlight.min.js
content/styles/spectre/: LICENSE
content/styles/theme/: catppuccin_mocha.css  custom-2026-02.css  naked_day.css  nord.css  original.css  rules.toml
content/templates/: footer.html  head.html  navbar.html
content/templates/generic/: box.html  date_badge.html  divider_hor.html  panel.html  section.html
content/templates/generic/image/: profile_circle.html  profile_square.html
content/templates/pages/blog/: blog_card.html  blog_section.html  code_style.html  feed.html  rss.html
content/templates/pages/index/: about.html  link_tree.html  links.html
content/templates/pages/projects/: github_banner.html  project_card.html
resources/: robots.txt
resources/fonts/fira_sans/: LICENSE
resources/pages/: 404.html  blogs.html  index.html  post.html  slashpage.html
resources/pages/blog/posts/: 2024-04-07-2023_retro.md  2024-11-12-a_year_on_game_engines.md  migrate.py  (+9 more)
resources/styles/: .ignore  content.css
resources/styles/theme/: catppuccin_macchiato.css  custom-2026-02.css  dracula.css  holidays.css  rose_pine.css  rules.toml  tokyo_night.css
resources/templates/: footer.html  h-card.html  head.html  navbar.html
resources/templates/generic/: box.html  date_badge.html  divider_hor.html  panel.html  section.html
src/: cache.rs  db.rs  main.rs  prelude.rs  resources.rs  site.rs  theme.rs  util.rs
src/pages/: blog.rs  error.rs  index.rs  links.rs  meta.rs  mod.rs  projects.rs  slashpages.rs
(+93 files in other folders)
