[package]
name = "hachha-dev"
version = "0.9.0"
edition = "2021"
authors = ["Harrison Hall <hachha@hachha.dev>"]
description = "Personal website 2.0"
readme = "README.md"
homepage = "https://hachha.dev"
repository = "https://github.com/harrisonhall/hachha.dev"
keywords = ["website", "blog", "hachha"]

[dependencies]
# Server
axum = "0.8"
tower-http = { version = "0.6", features = ["trace"] }

# CLI
clap = { version = "4.1", features = ["derive"] }
colored = "3.0"
log = "0.4"

# Serde
serde = { version = "1.0", features = ["derive"] }
serde_json = { version ="1.0", features = ["preserve_order"] }
toml = "0.8"

# Syndication
atom_syndication = "0.12"

# Markup
handlebars = "4.3"
markdown = "1.0.0-alpha.21"

# Util
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rust-embed = { version = "8.4", features = ["include-exclude"] }
tokio = { version = "1.0", features = ["full"] }

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
