[package]
name = "hachha-dev"
version = "0.14.0"
edition = "2021"
authors = ["Harrison Hall <hachha@hachha.dev>"]
description = "An (almost) static personal website and blog."
readme = "README.md"
homepage = "https://hachha.dev"
repository = "https://github.com/harrisonhall/hachha.dev"
keywords = ["website", "blog", "hachha"]

[dependencies]
# Server
axum = "0.8"
tower-http = { version = "0.6", features = ["trace"] }

# Serde
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version ="1.0", features = ["preserve_order"] }
toml = "0.8"

# Syndication
atom_syndication = "0.12"

# Markup
handlebars = "4.3"  # Updating this may cause whitespace issues!
markdown = "1.0"

# Util
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.1", features = ["derive"] }
color-eyre = "0.6"
flate2 = { version = "1.1", features = ["zlib-rs"] }
rand = "0.9"
rust-embed = { version = "8.4", features = ["include-exclude", "compression"] }
tar = "0.4"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev.package.backtrace]
opt-level = 3
